--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-app = "remix-shadcn"
+app = "e-com-supa"
 kill_signal = "SIGINT"
 kill_timeout = 5
 processes = []
@@ -38,7 +38,7 @@ timeout = "2s"
 
 [[services.http_checks]]
 grace_period = "5s"
-headers = {}
+headers = { }
 interval = 10_000
 method = "get"
 path = "/healthcheck"
