--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
-    "@remix-run/express": "^2.13.1",
-    "@remix-run/node": "^2.13.1",
-    "@remix-run/react": "^2.13.1",
-    "@remix-run/serve": "^2.13.1",
+    "@remix-run/express": "2.15.0",
+    "@remix-run/node": "2.15.0",
+    "@remix-run/react": "2.15.0",
+    "@remix-run/serve": "2.15.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "compression": "1.7.4",
@@ -41,7 +41,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@remix-run/dev": "^2.13.1",
+    "@remix-run/dev": "2.15.0",
     "@tailwindcss/typography": "0.5.15",
     "@types/node": "22.8.4",
     "@types/react": "18.3.12",
